bluejay-typegen/tests/validation_cases/error/invalid_schema.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: Bar
    }
])]
mod schema {}

fn main() {}
